--- a/render.yaml
+++ b/render.yaml
@@ -28,7 +28,7 @@ services:
     name: ticker-ui
     env: static
     rootDir: frontend
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build
     staticPublishPath: dist
     envVars:
       - key: VITE_API_BASE
