--- a/render.yaml
+++ b/render.yaml
@@ -25,11 +25,14 @@ services:
         value: "0.8"
 
   - type: web
-    name: ticker-ui
-    env: static
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
-    envVars:
-      - key: VITE_API_BASE
-        value: https://ticker-api-ex8c.onrender.com
+      name: ticker-ui
+      env: static
+      rootDir: frontend
+      buildCommand: |
+        rm -rf node_modules package-lock.json
+        npm install --legacy-peer-deps
+        npm run build
+      staticPublishPath: dist
+      envVars:
+        - key: VITE_API_BASE
+          value: https://ticker-api-ex8c.onrender.com
