--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,11 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
-  }
+  },
+  "engines": {
+      "node": "20.x",
+      "pnpm": "9.x"
+    },
+    "packageManager": "pnpm@9.11.0"
+  
 }
